# dotfiles

./: .clang-format  .p10k.zsh  .zshrc  README.md
.config/: .gitmessage
.config/clangd/: config.yaml
.config/i3/: config
.config/lazygit/: state.yml
.config/nvim/: init.lua  lazy-lock.json
.config/nvim.bak/: init.lua
.config/nvim.bak/lua/user/: keymaps.lua  plugins.lua  settings.lua  toggleterm.lua  treesitter.lua  wasp.lua
.config/nvim.bak/lua/user/lsp/: lsp-installer.lua  null-ls.lua
.config/nvim.bak/plugin/: packer_compiled.lua
.config/nvim/ftplugin/: lua.lua
.config/nvim/lua/config/: autocmds.lua  keymaps.lua  lazy.lua  options.lua
.config/nvim/lua/plugins/: appearance.lua  coding-config.lua  disabled.lua  mystyle.lua  toggleterm.lua  wasp.lua
.config/nvim/lua/user/: alpha.lua  competitest.lua  gitsigns.lua  keymaps.lua  plugins.lua  project.lua  settings.lua  vimtex.lua  wasp.lua
.config/nvim/lua/user/lsp/: handlers.lua  lsp-installer.lua
.config/nvim/plugin/: packer_compiled.lua
.config/polybar/: bluetooth.sh  config.ini  launch.sh  power.sh
.config/tmux/: tmux.conf.local
.template/: CMakeLists.txt  debugutil.h  template.cc  template.cpp  template.py
scripts/: build.sh  build_script_cpp.sh  com.sh  dbcom.sh  download_problems.py  init_solver.bak  init_solver.py  interact.sh  make_problem.sh  programming_tools.py  run_problem.sh  run_solution.sh  runner.py  stresstest.sh  test_solution.sh  validator.sh
scripts/windows/: .clangd  README.md  build.cmd  build_java.cmd  dl.cmd  download_tc.py  test.cmd  test_solution.py
vim_old/: _vimrc  beautiful.vim  init.vim  map_key.vim  settings.vim  vim_plugs.vim
wallpapers/: .~lock.CÁC TRƯỜNG ĐH.doc#  CÁC TRƯỜNG ĐH.doc
